Entendimiento del negocio

--- a/Proyecto:Fase_1_Entendimiento_del_negocio.ipynb
+++ b/Proyecto:Fase_1_Entendimiento_del_negocio.ipynb
@@ -1,25 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Robert-Gomez-AI/HeartFailure/blob/main/Proyecto%3AFase_1_Entendimiento_del_negocio.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -27,23 +12,23 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "<img src = \"https://drive.google.com/uc?export=view&id=1ljiY7gV0TKs3nnTMPA5UBdED8KGzzZnX\" alt = \"Encabezado MLDS\" width = \"100%\">  </img>"
-      ],
       "metadata": {
         "id": "2qrgS_sCJquS"
-      }
+      },
+      "source": [
+        "<img src = \"https://drive.google.com/uc?export=view&id=1ljiY7gV0TKs3nnTMPA5UBdED8KGzzZnX\" alt = \"Encabezado MLDS\" width = \"100%\">  </img>"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "--22KSZzLR-o"
+      },
       "source": [
         "# **Entendimiento del negocio**\n",
         "---\n",
         "Este notebook es una plantilla que le puede servir como guía para el primer entregable del proyecto aplicado."
-      ],
-      "metadata": {
-        "id": "--22KSZzLR-o"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -63,9 +48,70 @@
         "id": "ckNDI7ftUrpa"
       },
       "source": [
-        "1. ---**INGRESE SU RESPUESTA**---\n",
-        "2. ---**INGRESE SU RESPUESTA**---\n",
-        "3. ---**INGRESE SU RESPUESTA**---"
+        "1. John Robert Gomez Pachón\n",
+        "2. Yojhan Leandro Roldan Robles\n",
+        "3. Daniela Mejia Castro"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# **1. Entendimiento del negocio**\n",
+        "---\n",
+        "# 1.1 Trasfondo del proyecto\n",
+        "\n",
+        "El desarrollo del proyecto se encuentra en el marco del área de la salud, más específicamente se enfoca en el análisis de datos bioestadísticos. Este es un campo que, como se describe en el articulo Chicco y Jurman, intenta encontrar correlaciones y patrones en los datos que no son fácilmente detectables por los especialistas de la salud, paso seguido construyen modelos predictivos para determinar el posible estado de los pacientes basándose en sus características.\n",
+        "\n",
+        "El enfoque del proyecto se inclina por la búsqueda de relaciones entre las diferentes variables que componen la historia clínica electrónica (EHR por sus siglas en ingles). Lo anterior se fundamenta en las herramientas y metodologías del análisis y visualización de datos, particularmente se implementará en la metodología CRISP-DM.\n",
+        "\n",
+        "Los beneficios son fundamentalmente:\n",
+        "\n",
+        "- Poder reducir los factores de riesgo en la población en general para reducir el riesgo de fallo cardiaco y realizar tratamientos preventivos.\n",
+        "- Realizar un proceso de priorización para los pacientes para poder reducir sus indices de mortalidad.\n",
+        "\n",
+        "\n",
+        "El desafió al que este proyecto se enfrenta esta bien descrito en el articulo que presenta los datos, y es encontrar la manera de generar diagnostico precisos acerca de pacientes con fallas cardíacas, ya que al rededor del mundo se presentan cerca de 17 millones de muertes al año relacionadas con enfermedades cardiovasculares. Este reto ha sido tratado desde diferentes perspectivas, pero las herramientas de machine learning y bioestadistica han presentado deficiencias en generar modelos predictivos de alta precisión (comentado en el articulo).\n",
+        "\n",
+        "# 1.2 Alcance\n",
+        "\n",
+        "Nuestra proyección se enfoca en realizar un análisis exploratorio, además de un análisis de correlación y una visualización correspondiente, la idea es poder procesar los datos y encontrar los patrones y correlaciones entre las variables y el fallo cardiaco. En otras palabras vamos a replicar el objetivo del articulo esperando tener nuestros propios hallazgos.\n",
+        "\n",
+        "En cuanto a las limitaciones debemos tener en cuenta tanto limitaciones propias, como las limitaciones presentadas en el articulo:\n",
+        "\n",
+        "En el articulo se menciona que los modelos creados anteriormente tienen un problema de reproducibilidad en el entorno, y tiene como resultado un disenso en cuanto a los factores que son considerados causa de muerte en fallos cardiacos. Adicionalmente, el intento por mejorar la reproducibilidad de los modelos y los analisis impactan fuertemente su rendimiento, ya que se tiende a VALIDAR la eficacia de los modelos probandolos con diferentes datasets, lo cual concluye en una baja taza de presición del modelo. LA SOLUCIÓN que propone el articulo es reproducir el modelo en entornos altamente delimitados y precisos, es por ello que este dataset es tan pequeño y preciso (299 pacientes entre 45 y 95 con fallas cardiacas recolectadas en 2015 en tan solo 2 centros de salud de Pakistan), con ello las conclusiones SOLO aplicarían a la predicción de pacientes de una población muy similar. No podemos combinar datos de mas pacientes a menos que sean de una población similar, sino no tendremos consenso sobre las conclusiones.\n",
+        "El set de datos como lo conseguimos esta muy bien depurado y limpio, no presenta valores nulos, todos pertenecen a la misma población, esto nos deja una limitante en el proyecto y es que una de las fases se refiere a la PREPARACIÓN DE LOS DATOS, por lo que esta fase parece que no la podremos aplicar muy bien. Esto es algo que debemos dejar claro y preguntar para saber si hay algún problema.\n",
+        "El proyecto es de análisis y visualización de datos, como ya se menciono antes NO vamos a hacer ML, por lo que nuestra metodología es limitada frente al avance que ya existe en el paper.\n",
+        "Creo que el resultado del proyecto, más allá de tener una conclusión sobre los factores de riesgo identificados en este dataset (lo cual ya esta hecho en el paper), debe ser la creación de una herramienta que realice el proceso de datos y tenga como resultado una conclusión según el set de datos que se le proporcione. Es decir que el código reciba el set de datos, lo analice, y de respuesta a que criterios son los que afectan para la población del set proporcionado, y así podemos resolver el problema de reproducibilidad.\n",
+        "\n",
+        "# 1.3 Plan\n",
+        "\n",
+        "1. Definición del conjunto de datos\n",
+        "\n",
+        "- Identificar el conjunto de datos que se utilizará en el proyecto.\n",
+        "- Obtener información sobre el origen, la estructura y las características del conjunto de datos.\n",
+        "- Evaluar la calidad de los datos y determinar si se requiere algún tipo de limpieza o transformación.\n",
+        "\n",
+        "2. Entendimiento del negocio\n",
+        "\n",
+        "- Realizar un análisis del sector al que pertenece el conjunto de datos.\n",
+        "- Evaluar la situación actual del negocio y los objetivos que se persiguen.\n",
+        "- Definir los objetivos del proyecto de minería de datos en relación con los objetivos del negocio.\n",
+        "- Elaborar un plan de proyecto que detalle las actividades, los recursos y el cronograma del proyecto.\n",
+        "3. Entendimiento de los datos\n",
+        "\n",
+        "- Capturar los datos del conjunto de datos seleccionado.\n",
+        "- Describir las características del conjunto de datos, incluyendo la distribución de las variables, la presencia de valores atípicos y la existencia de relaciones entre las variables.\n",
+        "- Gestionar la calidad de los datos mediante la identificación y corrección de errores, la eliminación de valores atípicos y la transformación de variables.\n",
+        "4. Análisis de los datos\n",
+        "\n",
+        "- Seleccionar las técnicas de minería de datos más adecuadas para el proyecto.\n",
+        "- Aplicar las técnicas de minería de datos al conjunto de datos para obtener información valiosa.\n",
+        "- Interpretar los resultados del análisis y traducirlos en conocimiento útil para el negocio.\n",
+        "5. Comunicación de resultados\n",
+        "\n",
+        "- Generar un informe que documente los resultados del proyecto.\n",
+        "- Presentar los resultados del proyecto a las partes interesadas."
       ]
     },
     {
@@ -182,6 +228,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ceibuW1dNH9a"
+      },
       "source": [
         "## **Créditos**\n",
         "* **Profesor:** [Felipe Restrepo Calle](https://dis.unal.edu.co/~ferestrepoca/)\n",
@@ -193,10 +242,36 @@
         "    - [Edder Hernández Forero](https://www.linkedin.com/in/edder-hernandez-forero-28aa8b207/).\n",
         "    \n",
         "**Universidad Nacional de Colombia** - *Facultad de Ingeniería*"
-      ],
-      "metadata": {
-        "id": "ceibuW1dNH9a"
-      }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 2 Datos\n",
+        "\n",
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
