--- a/Proyecto:Fase_1_Entendimiento_del_negocio.ipynb
+++ b/Proyecto:Fase_1_Entendimiento_del_negocio.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Robert-Gomez-AI/HeartFailure/blob/main/Proyecto%3AFase_1_Entendimiento_del_negocio.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -55,13 +55,31 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "w2fwJpnBUkMV"
+      },
+      "source": [
+        "## **1. Marco de Proyecto**\n",
+        "---\n",
+        "\n",
+        "Normalmente, se suele construir un marco de proyecto para mostrar los resultados del entendimiento del negocio, es decir, debemos dar respuesta a los siguientes elementos:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pRqgu9BH_L30"
+      },
       "source": [
         "# **1. Entendimiento del negocio**\n",
         "---\n",
-        "# 1.1 Trasfondo del proyecto\n",
+        "# **1.1 Trasfondo del proyecto**\n",
+        "---\n",
+        "- ¿Quienes son los beneficiarios del proyecto? ¿En qué dominio se encuentran (marketing, medicina, entre otros)?\n",
+        "- ¿Cuáles son los principales desafíos o problemas de la situación que motivan la necesidad de realizar un proyecto de análisis de datos?\n",
+        "---\n",
         "\n",
-        "El desarrollo del proyecto se encuentra en el marco del área de la salud, más específicamente se enfoca en el análisis de datos bioestadísticos. Este es un campo que, como se describe en el articulo Chicco y Jurman, intenta encontrar correlaciones y patrones en los datos que no son fácilmente detectables por los especialistas de la salud, paso seguido construyen modelos predictivos para determinar el posible estado de los pacientes basándose en sus características.\n",
+        "El desarrollo del proyecto se encuentra en el marco del área de la salud, más específicamente se enfoca en el análisis de datos bioestadísticos. Este es un campo que, como se describe en el articulo Chicco y Jurman (en el que se analiza el mismo set de datos), intenta encontrar correlaciones y patrones en los datos que no son fácilmente detectables por los especialistas de la salud, paso seguido construyen modelos predictivos para determinar el posible estado de los pacientes basándose en sus características.\n",
         "\n",
         "El enfoque del proyecto se inclina por la búsqueda de relaciones entre las diferentes variables que componen la historia clínica electrónica (EHR por sus siglas en ingles). Lo anterior se fundamenta en las herramientas y metodologías del análisis y visualización de datos, particularmente se implementará en la metodología CRISP-DM.\n",
         "\n",
@@ -73,19 +91,23 @@
         "\n",
         "El desafió al que este proyecto se enfrenta esta bien descrito en el articulo que presenta los datos, y es encontrar la manera de generar diagnostico precisos acerca de pacientes con fallas cardíacas, ya que al rededor del mundo se presentan cerca de 17 millones de muertes al año relacionadas con enfermedades cardiovasculares. Este reto ha sido tratado desde diferentes perspectivas, pero las herramientas de machine learning y bioestadistica han presentado deficiencias en generar modelos predictivos de alta precisión (comentado en el articulo).\n",
         "\n",
-        "# 1.2 Alcance\n",
+        "# **1.2 Alcance**\n",
+        "---\n",
         "\n",
-        "Nuestra proyección se enfoca en realizar un análisis exploratorio, además de un análisis de correlación y una visualización correspondiente, la idea es poder procesar los datos y encontrar los patrones y correlaciones entre las variables y el fallo cardiaco. En otras palabras vamos a replicar el objetivo del articulo esperando tener nuestros propios hallazgos.\n",
+        "- ¿Qué  solución se desea implementar?\n",
+        "- ¿Cuáles son los límites y fronteras del proyecto de análisis de datos? ¿Qué aspectos específicos del negocio se incluirán y cuáles se excluyen en el alcance del proyecto?\n",
+        "- ¿De qué forma el cliente o beneficiario utilizará el producto del proyecto?\n",
+        "---\n",
+        "Nuestra proyección se enfoca en realizar un análisis exploratorio, además de un análisis de correlación y una visualización correspondiente, la idea es poder procesar los datos y encontrar los patrones y correlaciones entre las variables y el fallo cardiaco.\n",
         "\n",
         "En cuanto a las limitaciones debemos tener en cuenta tanto limitaciones propias, como las limitaciones presentadas en el articulo:\n",
         "\n",
-        "En el articulo se menciona que los modelos creados anteriormente tienen un problema de reproducibilidad en el entorno, y tiene como resultado un disenso en cuanto a los factores que son considerados causa de muerte en fallos cardiacos. Adicionalmente, el intento por mejorar la reproducibilidad de los modelos y los analisis impactan fuertemente su rendimiento, ya que se tiende a VALIDAR la eficacia de los modelos probandolos con diferentes datasets, lo cual concluye en una baja taza de presición del modelo. LA SOLUCIÓN que propone el articulo es reproducir el modelo en entornos altamente delimitados y precisos, es por ello que este dataset es tan pequeño y preciso (299 pacientes entre 45 y 95 con fallas cardiacas recolectadas en 2015 en tan solo 2 centros de salud de Pakistan), con ello las conclusiones SOLO aplicarían a la predicción de pacientes de una población muy similar. No podemos combinar datos de mas pacientes a menos que sean de una población similar, sino no tendremos consenso sobre las conclusiones.\n",
-        "El set de datos como lo conseguimos esta muy bien depurado y limpio, no presenta valores nulos, todos pertenecen a la misma población, esto nos deja una limitante en el proyecto y es que una de las fases se refiere a la PREPARACIÓN DE LOS DATOS, por lo que esta fase parece que no la podremos aplicar muy bien. Esto es algo que debemos dejar claro y preguntar para saber si hay algún problema.\n",
-        "El proyecto es de análisis y visualización de datos, como ya se menciono antes NO vamos a hacer ML, por lo que nuestra metodología es limitada frente al avance que ya existe en el paper.\n",
-        "Creo que el resultado del proyecto, más allá de tener una conclusión sobre los factores de riesgo identificados en este dataset (lo cual ya esta hecho en el paper), debe ser la creación de una herramienta que realice el proceso de datos y tenga como resultado una conclusión según el set de datos que se le proporcione. Es decir que el código reciba el set de datos, lo analice, y de respuesta a que criterios son los que afectan para la población del set proporcionado, y así podemos resolver el problema de reproducibilidad.\n",
+        ">1. En el articulo se menciona que los modelos creados anteriormente tienen un problema de reproducibilidad en el entorno, y tiene como resultado un disenso en cuanto a los factores que son considerados causa de muerte en fallos cardiacos. Adicionalmente, el intento por mejorar la reproducibilidad de los modelos y los analisis impactan fuertemente su rendimiento, ya que se tiende a validar la eficacia de los modelos probandolos con diferentes datasets, lo cual concluye en una baja taza de presición del modelo. La solución que propone el articulo es reproducir el modelo en entornos altamente delimitados y precisos, es por ello que este dataset es tan pequeño y preciso (299 pacientes entre 45 y 95 años con fallas cardiacas, los datos fueron recolectados en 2015 en tan solo 2 centros de salud de Pakistan), con ello las conclusiones SOLO aplicarían a la predicción de pacientes de una población muy similar. No podemos combinar datos de mas pacientes a menos que sean de una población similar, sino no tendremos consenso sobre las conclusiones.\n",
+        "2. El set de datos como lo conseguimos esta muy bien depurado y limpio, no presenta valores nulos, todos pertenecen a la misma población, esto nos deja una limitante en el proyecto y es que una de las fases se refiere a la PREPARACIÓN DE LOS DATOS, por lo que esta fase parece que no la podremos aplicar muy bien.\n",
+        "3. El proyecto es de análisis y visualización de datos, y como ya se mencionó anteriormente, NO vamos a implementar ninguna herramienta de machine learning, por lo que nuestra metodología esta resagada al avance que ya existe en el paper.\n",
         "\n",
-        "# 1.3 Plan\n",
-        "\n",
+        "#**1.3 Plan**\n",
+        "---\n",
         "1. Definición del conjunto de datos\n",
         "\n",
         "- Identificar el conjunto de datos que se utilizará en el proyecto.\n",
@@ -112,83 +134,6 @@
         "\n",
         "- Generar un informe que documente los resultados del proyecto.\n",
         "- Presentar los resultados del proyecto a las partes interesadas."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "w2fwJpnBUkMV"
-      },
-      "source": [
-        "## **1. Marco de Proyecto**\n",
-        "---\n",
-        "\n",
-        "Normalmente, se suele construir un marco de proyecto para mostrar los resultados del entendimiento del negocio, es decir, debemos dar respuesta a los siguientes elementos:"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7a974ec1"
-      },
-      "source": [
-        "### **1.1. Trasfondo del Negocio**\n",
-        "---\n",
-        "- ¿Quienes son los beneficiarios del proyecto? ¿En qué dominio se encuentran (marketing, medicina, entre otros)?\n",
-        "- ¿Cuáles son los principales desafíos o problemas de la situación que motivan la necesidad de realizar un proyecto de análisis de datos?"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "18d9305a"
-      },
-      "source": [
-        "---**INGRESE SU RESPUESTA**---"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "d09c63e5"
-      },
-      "source": [
-        "### **1.2. Alcance**\n",
-        "---\n",
-        "\n",
-        "- ¿Qué  solución se desea implementar?\n",
-        "- ¿Cuáles son los límites y fronteras del proyecto de análisis de datos? ¿Qué aspectos específicos del negocio se incluirán y cuáles se excluyen en el alcance del proyecto?\n",
-        "- ¿De qué forma el cliente o beneficiario utilizará el producto del proyecto?"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "12e3be6b"
-      },
-      "source": [
-        "---**INGRESE SU RESPUESTA**---"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "370e4a5d"
-      },
-      "source": [
-        "### **1.3. Plan**\n",
-        "---\n",
-        "\n",
-        "Puede agregar una lista de actividades con tiempos estimados, un diagrama de Gantt o integrar alguna herramienta de gestión de proyectos para mostrar la planeación del proyecto como [*Jira*](https://www.atlassian.com/software/jira?&aceid=&adposition=&adgroup=144583570757&campaign=19313283508&creative=641924587890&device=c&keyword=jira%20software%20online&matchtype=p&network=g&placement=&ds_kids=p74602877891&ds_e=GOOGLE&ds_eid=700000001558501&ds_e1=GOOGLE&gad_source=1&gclid=CjwKCAiAqNSsBhAvEiwAn_tmxStBdySS6RxbLNGXE0tWTeJc32ffjQD_1EXZvH6hmQkYZm5bTa3sgBoCX3oQAvD_BwE&gclsrc=aw.ds) o [*Trello*](https://trello.com/?&aceid=&adposition=&adgroup=144675712219&campaign=19250238609&creative=641300630637&device=c&keyword=trello&matchtype=e&network=g&placement=&ds_kids=p74526213668&ds_e=GOOGLE&ds_eid=700000001557344&ds_e1=GOOGLE&gad_source=1&gclid=CjwKCAiAqNSsBhAvEiwAn_tmxWW7Gdzf0Szf-mA-piM2GPM7tk8R0HsgpBALLGHNFq1-2xXMQbxB1RoCs-sQAvD_BwE&gclsrc=aw.ds)."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "3b465355"
-      },
-      "source": [
-        "---**INGRESE SU RESPUESTA**---"
       ]
     },
     {
@@ -223,7 +168,7 @@
         "id": "7261ad96"
       },
       "source": [
-        "---**INGRESE SU RESPUESTA**---"
+        "**Los datos fueron extraidos de Kaggle, el set de datos tiene dimensiones (299,16), los datos son tanto categoricos como cuantitativos. El set comprende información de la historia clinica electónica de pacientes que hayan sufrido una falla cardiaca en 2 centros medicos ubicados en pakistan.**"
       ]
     },
     {
@@ -246,7 +191,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "bjdCy0Ag_L33"
+      },
       "source": [
         "# 2 Datos\n",
         "\n",
@@ -255,14 +202,20 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
-      "source": []
+      "source": [
+        "**Link del conjunto de datos**\n",
+        "\n",
+        "https://www.kaggle.com/datasets/nimapourmoradi/heart-failure-clinical-records"
+      ],
+      "metadata": {
+        "id": "C0_ktVxWJJvO"
+      }
     }
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
