Descripción de los datos

--- a/Proyecto:Fase_1_Entendimiento_del_negocio.ipynb
+++ b/Proyecto:Fase_1_Entendimiento_del_negocio.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Robert-Gomez-AI/HeartFailure/blob/main/Proyecto%3AFase_1_Entendimiento_del_negocio.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -106,7 +106,7 @@
         "2. El set de datos como lo conseguimos esta muy bien depurado y limpio, no presenta valores nulos, todos pertenecen a la misma población, esto nos deja una limitante en el proyecto y es que una de las fases se refiere a la PREPARACIÓN DE LOS DATOS, por lo que esta fase parece que no la podremos aplicar muy bien.\n",
         "3. El proyecto es de análisis y visualización de datos, y como ya se mencionó anteriormente, NO vamos a implementar ninguna herramienta de machine learning, por lo que nuestra metodología esta resagada al avance que ya existe en el paper.\n",
         "\n",
-        "#**1.3 Plan**\n",
+        "# **1.3 Plan**\n",
         "---\n",
         "1. Definición del conjunto de datos\n",
         "\n",
@@ -145,30 +145,73 @@
         "## **2. Datos**\n",
         "---\n",
         "\n",
-        "En esta sección debe adjuntar una descripción de los datos que planea trabajar. Por el momento no es obligatorio cargar los datos."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "2c5f8274"
-      },
-      "source": [
-        "### **2.1. Origen**\n",
-        "---\n",
+        "## **2.1 Origen**\n",
+        "Fuente: Registros médicos del Instituto de Cardiología Faisalabad y el Hospital Allied en Pakistán.\n",
         "\n",
-        "- ¿De dónde vienen los datos?\n",
-        "- ¿Se usa alguna herramienta o proceso para la descarga de la información?\n",
-        "- ¿Qué tipo de datos está manejando?"
+        "Periodo: Abril-Diciembre 2015.\n",
+        "\n",
+        "Pacientes: 299 (105 mujeres, 194 hombres), edades entre 40 y 95 años.\n",
+        "\n",
+        "Diagnóstico: Todos con disfunción sistólica del ventrículo izquierdo e insuficiencia cardíaca previa (NYHA III o IV).\n",
+        "\n",
+        "Información: 13 características clínicas, corporales y de estilo de vida (Tabla 1). Algunas binarias (anemia, presión arterial alta, diabetes, sexo, tabaquismo).\n",
+        "\n",
+        "Características:\n",
+        "\n",
+        "   - Enzimas: CPK (daño muscular), EF (eficiencia cardíaca).\n",
+        "   - Función renal: creatinina sérica.\n",
+        "   - Electrolitos: sodio sérico.\n",
+        "   - Otros: edad, peso, altura, hemoglobina, sexo, presión arterial, diabetes, tabaquismo, anemia.\n",
+        "\n",
+        "Variable objetivo: Evento de muerte (sí/no) dentro de 130 días promedio de seguimiento.\n",
+        "Desbalance: 67.89% sobrevivientes, 32.11% fallecidos.\n",
+        "Formato: Tabla con 299 filas (pacientes) y 13 columnas (características).\n",
+        "\n",
+        "Limitaciones:\n",
+        "\n",
+        "   - Definición de \"presión arterial alta\" desconocida.\n",
+        "   - Desconocimiento de enfermedad renal primaria o tipo de seguimiento.\n",
+        "   - Posibles errores en el resumen (se recomienda consultar el artículo original)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Tabla 1: Características del conjunto de datos sobre pacientes con insuficiencia cardíaca\n",
+        "\n",
+        "| Característica | Descripción | Tipo |\n",
+        "|---|---|---|\n",
+        "| Edad | Edad del paciente en años | Numérica |\n",
+        "| Sexo | Sexo del paciente (hombre/mujer) | Binaria |\n",
+        "| Peso | Peso del paciente en kilogramos | Numérica |\n",
+        "| Altura | Altura del paciente en metros | Numérica |\n",
+        "| Hemoglobina | Nivel de hemoglobina en la sangre (g/dL) | Numérica |\n",
+        "| Presión arterial | Presión arterial sistólica/diastólica (mmHg) | Numérica |\n",
+        "| Diabetes | ¿Tiene diabetes el paciente? (sí/no) | Binaria |\n",
+        "| Tabaquismo | ¿Fuma el paciente? (sí/no) | Binaria |\n",
+        "| Anemia | ¿Tiene anemia el paciente? (sí/no) | Binaria |\n",
+        "| CPK | Nivel de la enzima CPK en la sangre (U/L) | Numérica |\n",
+        "| EF | Eficiencia cardíaca (%) | Numérica |\n",
+        "| Creatinina sérica | Nivel de creatinina en la sangre (mg/dL) | Numérica |\n",
+        "| Sodio sérico | Nivel de sodio en la sangre (mEq/L) | Numérica |\n",
+        "| Evento de muerte | ¿El paciente murió durante el seguimiento? (sí/no) | Binaria |\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7261ad96"
+        "id": "C0_ktVxWJJvO"
       },
       "source": [
-        "**Los datos fueron extraidos de Kaggle, el set de datos tiene dimensiones (299,16), los datos son tanto categoricos como cuantitativos. El set comprende información de la historia clinica electónica de pacientes que hayan sufrido una falla cardiaca en 2 centros medicos ubicados en pakistan.**"
+        "**Link del conjunto de datos**\n",
+        "\n",
+        "https://www.kaggle.com/datasets/nimapourmoradi/heart-failure-clinical-records\n",
+        "\n",
+        "\n",
+        "**Link de una investigación asociada, con información extra**\n",
+        "\n",
+        "https://bmcmedinformdecismak.biomedcentral.com/articles/10.1186/s12911-020-1023-5"
       ]
     },
     {
@@ -188,34 +231,12 @@
         "    \n",
         "**Universidad Nacional de Colombia** - *Facultad de Ingeniería*"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "bjdCy0Ag_L33"
-      },
-      "source": [
-        "# 2 Datos\n",
-        "\n",
-        "---"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Link del conjunto de datos**\n",
-        "\n",
-        "https://www.kaggle.com/datasets/nimapourmoradi/heart-failure-clinical-records"
-      ],
-      "metadata": {
-        "id": "C0_ktVxWJJvO"
-      }
     }
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
