se agrega enlace al gantt

--- a/Proyecto:Fase_1_Entendimiento_del_negocio.ipynb
+++ b/Proyecto:Fase_1_Entendimiento_del_negocio.ipynb
@@ -133,7 +133,11 @@
         "5. Comunicación de resultados\n",
         "\n",
         "- Generar un informe que documente los resultados del proyecto.\n",
-        "- Presentar los resultados del proyecto a las partes interesadas."
+        "- Presentar los resultados del proyecto a las partes interesadas.\n",
+        "\n",
+        "**Información extra**\n",
+        "\n",
+        "Enlace al gantt: https://github.com/users/danielamejiacastro/projects/1"
       ]
     },
     {
