--- a/Fase_2_Entendimiento_de_los_datos.ipynb
+++ b/Fase_2_Entendimiento_de_los_datos.ipynb
@@ -49,9 +49,9 @@
         "id": "ckNDI7ftUrpa"
       },
       "source": [
-        "1. ---**INGRESE SU RESPUESTA**---\n",
-        "2. ---**INGRESE SU RESPUESTA**---\n",
-        "3. ---**INGRESE SU RESPUESTA**---"
+        "1. John Robert Gomez Pachón\n",
+        "2. Yojhan Leandro Roldan Robles\n",
+        "3. Daniela Mejia Castro"
       ]
     },
     {
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -296,7 +296,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "FxykiJtCzQl2"
       },
@@ -311,18 +311,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "f6de2158"
-      },
-      "source": [
-        "## **2. Análisis Exploratorio de los Datos**\n",
-        "---\n",
-        "\n",
-        "Normalmente en el análisis exploratorio, se trata de dar respuesta a los siguientes elementos:"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "To3Eo_tc1lPI"
       },
       "source": [
@@ -330,8 +318,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f6de2158"
+      },
+      "source": [
+        "## **2. Análisis Exploratorio de los Datos**\n",
+        "---\n",
+        "\n",
+        "En esta fase, nos dedicamos a explorar y analizar detalladamente nuestro conjunto de datos con el objetivo de resumir sus características fundamentales. Nuestra meta es descubrir patrones, identificar anomalías y comprender comportamientos que puedan proporcionar insights valiosos. Este análisis exploratorio nos permite establecer, evaluar y verificar hipótesis, proporcionando una base sólida para la interpretación y toma de decisiones fundamentadas en los datos."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -711,7 +711,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -741,7 +741,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -787,12 +787,14 @@
         "id": "gm6Re7TS215s"
       },
       "source": [
-        "###**2.2 Tipos de variables**"
+        "###**2.2 Tipos de variables**\n",
+        "\n",
+        "En el conjunto de datos que vamos estamos analizando, se incluyen diversas variables que caracterizan a 299 pacientes que han experimentado un fallo cardiaco. Estas variables abarcan tanto tipos discretos como continuos, y la intención es comprender el comportamiento de los pacientes afectados. El objetivo principal es estudiar la dinámica de los datos con el fin de prever posibles patrones que indiquen la probabilidad de reincidencia en casos de fallo cardiaco."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "kVsLVIXuyI8U"
       },
@@ -818,7 +820,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -850,6 +852,8 @@
       "source": [
         "#### **Tabla 1: Características del conjunto de datos sobre pacientes con insuficiencia cardíaca**\n",
         "\n",
+        "La tabla presenta las distintas características del conjunto de datos que se enfoca en pacientes que han experimentado insuficiencia cardíaca. Dichas características incluyen información demográfica como la edad y el sexo, así como medidas médicas como el peso, la altura, la presión arterial, niveles de hemoglobina, entre otros. Las variables se clasifican en numéricas y binarias:\n",
+        "\n",
         "| Característica | Descripción | Tipo |\n",
         "|---|---|---|\n",
         "| Edad | Edad del paciente en años | Numérica |\n",
@@ -878,8 +882,16 @@
         "---\n",
         "\n",
         "- ¿Cuántos registros contiene el *dataset*?\n",
+        "\n",
+        "Nuestro conjunto de datos alberga un total de 299 registros, distribuidos entre 105 correspondientes a mujeres y 194 a hombres, abarcando edades desde los 40 hasta los 95 años.\n",
+        "\n",
         "- ¿En qué formato están guardados los datos?\n",
-        "- ¿Qué tamaño en MB tiene el conjunto de datos?"
+        "\n",
+        "Los datos se encuentran almacenados en formato (.csv), que representa Valores Separados por Comas en inglés. Estos archivos, de aparente simplicidad pero con gran potencial, son una herramienta fundamental en el ámbito de la informática y la gestión de datos. Este formato destaca por su universalidad, simplicidad, portabilidad, facilidad de intercambio y eficiencia en el almacenamiento, entre otras ventajas.\n",
+        "\n",
+        "- ¿Qué tamaño en MB tiene el conjunto de datos?\n",
+        "\n",
+        "El tamaño del conjunto de datos es de 11.9 KB (12,239 bytes), equivalente a 0.012239 MB."
       ]
     },
     {
@@ -914,7 +926,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -948,7 +960,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1272,7 +1284,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1729,7 +1741,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1762,6 +1774,41 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "**Variable: Edad (age)**\n",
+        "\n",
+        "En este diagrama de bigotes, observamos que la mediana de la edad está alrededor de 60 años, el rango intercuartílico (IQR) abarca desde aproximadamente 51 a 70 años, y no hay valores atípicos evidentes.\n",
+        "\n",
+        "**Variable: Nivel de Creatinina Fosfoquinasa (creatinine_phosphokinase)**\n",
+        "\n",
+        "En este caso, vemos que el nivel de creatinina fosfoquinasa tiende a tener valores más bajos en su mayor parte, pero hay algunos puntos que podrían considerarse valores atípicos, ya que se encuentran fuera de los bigotes.\n",
+        "\n",
+        "**Variable: Plaquetas (platelets)**\n",
+        "\n",
+        "En el diagrama de bigotes de la variable \"Plaquetas\", se observa que la mediana está alrededor de 262,000 unidades. El rango intercuartílico (IQR) sugiere que la mayoría de los datos se concentran entre 212,500 y 303,500 unidades, con algunos valores atípicos por encima de este rango superior.\n",
+        "\n",
+        "**Variable: Nivel de Creatinina en Suero (serum_creatinine)**\n",
+        "\n",
+        "El diagrama de bigotes para la creatinina en suero muestra que la mediana está cerca de 1.1 mg/dL, con un IQR que se extiende desde aproximadamente 0.9 hasta 1.4 mg/dL. Se identifican algunos valores atípicos por encima de este rango superior.\n",
+        "\n",
+        "**Variable: Nivel de Sodio en Suero (serum_sodium)**\n",
+        "\n",
+        "El diagrama de bigotes para el sodio en suero indica que la mediana se encuentra alrededor de 137 mEq/L, con un IQR que va desde aproximadamente 134 hasta 140 mEq/L. No hay valores atípicos evidentes en este caso.\n",
+        "\n",
+        "**Variable: Período de Seguimiento (time)**\n",
+        "\n",
+        "Para la variable \"Período de Seguimiento\", el diagrama de bigotes muestra una mediana cercana a 115 días y un IQR que se extiende desde aproximadamente 73 hasta 203 días. No se identifican valores atípicos en este rango.\n",
+        "\n",
+        "**Variable: Evento de Fallecimiento (DEATH_EVENT)**\n",
+        "\n",
+        "En el diagrama de bigotes de la variable \"Evento de Fallecimiento\", se observa que la mediana es 0 (sin evento de fallecimiento) y que la mayoría de los datos se concentran en 0, con algunos valores atípicos representando eventos de fallecimiento (1)."
+      ],
+      "metadata": {
+        "id": "XZH2Qfgs5FTE"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "vqiK7tvkEoJn"
       },
@@ -1771,7 +1818,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1804,8 +1851,31 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Los resultados de las medidas de forma, conocidas como kurtosis, ofrecen insights sobre la configuración de las distribuciones de las variables. A continuación, presentamos un análisis preliminar de la kurtosis para cada una de nuestras variables:\n",
+        "\n",
+        "**Kurtosis Variable Edad (age):** La kurtosis es -0.18, lo que sugiere una distribución relativamente cercana a una distribución normal. La cola de la distribución de edades no es muy pesada.\n",
+        "\n",
+        "**Kurtosis Variable Creatinina Fosfoquinasa (creatinine_phosphokinase):** La kurtosis es 25.15, indicando una distribución con colas pesadas. Esto podría sugerir la presencia de valores extremadamente altos en la variable.\n",
+        "\n",
+        "**Kurtosis VariableEficiencia de Eyección (ejection_fraction):** La kurtosis es 0.04, lo que sugiere una distribución bastante normal. La variable no tiene colas pesadas.\n",
+        "\n",
+        "**Kurtosis Variable Plaquetas (platelets):** La kurtosis es 6.21, indicando colas pesadas en la distribución de plaquetas. Esto puede sugerir la presencia de valores atípicos extremadamente altos.\n",
+        "\n",
+        "**Kurtosis Variable Creatinina en Suero (serum_creatinine):** La kurtosis es 25.83, lo que sugiere colas pesadas en la distribución de la creatinina en suero. Esto podría indicar la presencia de valores extremadamente altos.\n",
+        "\n",
+        "**Kurtosis Variable Sodio en Suero (serum_sodium):** La kurtosis es 4.12, indicando colas pesadas en la distribución de sodio en suero. Puede haber valores extremadamente altos o bajos en la variable.\n",
+        "\n",
+        "**Kurtosis Variable Período de Seguimiento (time):** La kurtosis es -1.21, sugiriendo una distribución relativamente plana o con colas ligeras. La variable podría tener menos presencia de valores extremadamente altos o bajos."
+      ],
+      "metadata": {
+        "id": "Uphu1h5h5PPJ"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1839,18 +1909,58 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "**Asimetria Variable Edad (age)**: La asimetría es positiva (0.42), sugiriendo una cola derecha en la distribución de edades. Esto indica que hay más datos en el lado izquierdo de la media y algunos valores más altos que la media.\n",
+        "\n",
+        "**Asimetria Variable Creatinina Fosfoquinasa (creatinine_phosphokinase)**: La asimetría es positiva (4.46), indicando una cola derecha pronunciada. Esto sugiere que la mayoría de los valores están en el lado izquierdo de la media, pero hay algunos valores extremadamente altos.\n",
+        "\n",
+        "**Asimetria Variable Eficiencia de Eyección (ejection_fraction)**: La asimetría es positiva (0.56), indicando una cola derecha en la distribución de la eficiencia de eyección. Puede haber algunos valores más altos que la media.\n",
+        "\n",
+        "**Asimetria Variable Plaquetas (platelets)**: La asimetría es positiva (1.46), sugiriendo una cola derecha. La mayoría de los datos se encuentran en el lado izquierdo de la media, pero hay algunos valores extremadamente altos.\n",
+        "\n",
+        "**Asimetria Variable Creatinina en Suero (serum_creatinine)**: La asimetría es positiva (4.46), indicando una cola derecha pronunciada en la distribución de la creatinina en suero. La mayoría de los valores se concentran en el lado izquierdo de la media, pero hay algunos valores extremadamente altos.\n",
+        "\n",
+        "**Asimetria Variable Sodio en Suero (serum_sodium)**: La asimetría es negativa (-1.05), indicando una cola izquierda en la distribución del sodio en suero. Puede haber algunos valores más bajos que la media.\n",
+        "\n",
+        "**Asimetria Variable Período de Seguimiento (time)**: La asimetría es ligeramente positiva (0.13), sugiriendo una cola derecha en la distribución del período de seguimiento. Puede haber algunos valores más altos que la media."
+      ],
+      "metadata": {
+        "id": "AFoziagR0x1h"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "rr8yDjrUG37L"
       },
       "source": [
         "####**3.1.1 Histogramas**\n",
         "---\n",
-        "Visualizar la distribución de los datos"
+        "Edad (age):\n",
+        "Dado que la kurtosis es cercana a cero y la asimetría es moderadamente positiva, el histograma de la variable \"Edad\" muestra una forma simétrica, similar a una distribución normal, con la mayoría de las edades centradas en torno a la media.\n",
+        "\n",
+        "Creatinina Fosfoquinasa (creatinine_phosphokinase):\n",
+        "Con una kurtosis alta y una asimetría positiva pronunciada, el histograma presenta una concentración significativa de valores hacia la izquierda y una cola derecha extendida, indicando la presencia de valores extremadamente altos.\n",
+        "\n",
+        "Eficiencia de Eyección (ejection_fraction):\n",
+        "Dado que la kurtosis es cercana a cero y la asimetría es moderadamente positiva, el histograma presenta una forma simétrica, similar a una distribución normal, con algunos valores más altos que la media.\n",
+        "\n",
+        "Plaquetas (platelets):\n",
+        "Con una kurtosis alta y una asimetría positiva pronunciada, el histograma muestra una concentración de valores hacia la izquierda y una cola derecha pronunciada, señalando la presencia de valores atípicos extremadamente altos.\n",
+        "\n",
+        "Creatinina en Suero (serum_creatinine):\n",
+        "Similar a la creatinina fosfoquinasa, con alta kurtosis y asimetría positiva pronunciada, el histograma presenta una concentración de valores hacia la izquierda y una cola derecha extendida, indicando la presencia de valores extremadamente altos.\n",
+        "\n",
+        "Sodio en Suero (serum_sodium):\n",
+        "Con una kurtosis moderadamente alta y asimetría negativa, el histograma muestra una concentración de valores hacia la derecha y una cola izquierda, indicando la posibilidad de valores extremadamente bajos.\n",
+        "\n",
+        "Período de Seguimiento (time):\n",
+        "Dado que la kurtosis es negativa y la asimetría es moderadamente positiva, el histograma presenta una concentración de valores hacia la izquierda y una cola derecha, sugiriendo que la mayoría de los periodos de seguimiento están en el lado más corto."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1894,7 +2004,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1971,7 +2081,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2418,7 +2528,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2452,7 +2562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2486,7 +2596,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2808,7 +2918,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3355,7 +3465,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3725,7 +3835,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3785,7 +3895,7 @@
           "height": 175
         }
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4085,7 +4195,7 @@
           "height": 175
         }
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4385,7 +4495,7 @@
           "height": 175
         }
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4685,7 +4795,7 @@
           "height": 175
         }
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4985,7 +5095,7 @@
           "height": 175
         }
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5287,7 +5397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": null,
       "metadata": {
         "id": "L7u_cP_tX5G7"
       },
