--- a/Fase_3_Preparación_de_los_datos.ipynb
+++ b/Fase_3_Preparación_de_los_datos.ipynb
@@ -101,7 +101,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "IsjJXyj8l7T0"
+        "id": "P1VEBAxbnqYM"
       },
       "outputs": [],
       "source": [
@@ -129,8 +129,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "lm96bQ34l7T2",
-        "outputId": "9a79ae0a-c91a-40da-8981-621cff9429f8"
+        "id": "h-vHGwTWnqYO",
+        "outputId": "c04b7670-f6e8-4527-ec50-9d178b844178"
       },
       "outputs": [
         {
@@ -237,15 +237,14 @@
       "execution_count": null,
       "metadata": {
         "id": "--J8K7mfgm2m",
-        "outputId": "424a107b-f60c-4bae-d179-59f55b63ae44"
+        "outputId": "d8248d4a-3427-4834-e58b-d2cbb6906307"
       },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Cantidad de Valores Duplicados: 0\n",
-            "Cantidad de Valores Duplicados después de la Eliminación: 0\n"
+            "Cantidad de Valores Duplicados: 0\n"
           ]
         }
       ],
@@ -254,13 +253,7 @@
         "duplicates = df[df.duplicated()]\n",
         "\n",
         "# Imprimir la cantidad de valores duplicados\n",
-        "print(\"Cantidad de Valores Duplicados:\", len(duplicates))\n",
-        "\n",
-        "# Manejar los valores duplicados (eliminarlos o realizar acciones específicas)\n",
-        "df_cleaned = df.drop_duplicates()\n",
-        "\n",
-        "# Imprimir la cantidad de valores duplicados después de la eliminación\n",
-        "print(\"Cantidad de Valores Duplicados después de la Eliminación:\", len(df_cleaned[df_cleaned.duplicated()]))"
+        "print(\"Cantidad de Valores Duplicados:\", len(duplicates))\n"
       ]
     },
     {
@@ -294,7 +287,7 @@
       "execution_count": null,
       "metadata": {
         "id": "z_F5tlESgnjG",
-        "outputId": "d0f7a3ca-9f8d-4701-bb12-19d50046dacf"
+        "outputId": "65bf5636-07e1-4264-9439-528cf39394de"
       },
       "outputs": [
         {
@@ -321,7 +314,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "TfUxucHvl7T5"
+        "id": "8LKg0VUPnqYR"
       },
       "outputs": [],
       "source": [
@@ -333,8 +326,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ITmlTfS5l7T5",
-        "outputId": "b37d1d25-710a-4fe3-ca31-5d0e480eba13"
+        "id": "CUiG0s81nqYR",
+        "outputId": "a128f2d7-7211-4017-8f12-9e54a6d04fae"
       },
       "outputs": [
         {
@@ -371,7 +364,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "METOXfZ0l7T5"
+        "id": "KGz-TbhPnqYS"
       },
       "outputs": [],
       "source": [
@@ -387,11 +380,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "xx69gCWnl7T5"
+        "id": "7BdMB7l-nqYS"
       },
       "outputs": [],
       "source": [
-        "# Identificar y manejar valores atípicos (puedes elegir eliminarlos o imputarlos)\n",
+        "# Identificar y manejar valores atípicos\n",
         "outliers = df[(df[variable_atipica] < lower_limit) | (df[variable_atipica] > upper_limit)]\n",
         "df_no_outliers = df[(df[variable_atipica] >= lower_limit) & (df[variable_atipica] <= upper_limit)]"
       ]
@@ -430,7 +423,7 @@
       },
       "outputs": [],
       "source": [
-        "# Identificar inconsistencias en las unidades o formatos (ejemplo: 'platelets' y 'serum_creatinine')\n",
+        "# Identificar inconsistencias en las unidades o formatos\n",
         "inconsistencias = df[(df['platelets'] < 100000) | (df['serum_creatinine'] > 10)]\n"
       ]
     },
@@ -438,8 +431,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "kPd-Z_O5l7T6",
-        "outputId": "fba38b14-1707-43e9-d2d1-7b89c95430e8"
+        "id": "3Owr_PjmnqYT",
+        "outputId": "6d6b28a6-c353-4ce5-8d2a-fd4a04e3213c"
       },
       "outputs": [
         {
@@ -466,8 +459,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "PxtGWDqal7T6",
-        "outputId": "ae565283-b93e-481e-bd92-53604832aee1"
+        "id": "SDNnGDlanqYT",
+        "outputId": "9c3f842f-b353-4836-cfeb-ab00c8311e9c"
       },
       "outputs": [
         {
@@ -487,7 +480,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "gpoWIfarl7T6"
+        "id": "pJzLSXoQnqYT"
       },
       "outputs": [],
       "source": [
@@ -502,8 +495,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "gOKHrDTEl7T6",
-        "outputId": "3b6ab028-7da5-4c33-e3fb-e9f3fb74f214"
+        "id": "RfJntJsVnqYU",
+        "outputId": "30623b3c-8ef6-47b6-9e80-0b1953b8135f"
       },
       "outputs": [
         {
@@ -565,8 +558,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "fNk7w_k3l7T7",
-        "outputId": "9c019e98-2036-41c3-afca-d8252e53e3ad"
+        "id": "dXGuDFO3nqYV",
+        "outputId": "492f6b97-56b5-47f5-927d-603c68dabcf7"
       },
       "outputs": [
         {
@@ -594,8 +587,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "dZMO53iBl7T7",
-        "outputId": "3df360df-9787-404b-9fe0-f5d7cba7f6ba"
+        "id": "5Ta8zJ8onqYV",
+        "outputId": "79d69f30-0b86-4e69-87dd-1136ce0c7460"
       },
       "outputs": [
         {
